adding in date & time readout as lagniappe, end of ch 8

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,9 @@
           <li><a href="/questions">Questions</a></li>
           <li><a href="/news">News</a></li>
           <li><a href="/contact">Contact</a></li>
+          <br/>
+          <li><%= DateTime.now.strftime("%m/%d/%y") %></li>
+          <li><%= Time.now.strftime("%l:%M %p") %></li>
         </ul> 
       </nav>
 
